<resources>
    <string name="app_name">HandyBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iltimos_kutib_turing">Iltimos kutib turing …</string>
    <string name="barchasini_ko_rish">Barchasini ko\'rish</string>
    <string name="darsliklar">Darsliklar</string>
    <string name="romanlar">Romanlar</string>
    <string name="kitob_yoki_muallifni_qidiring">Kitob yoki muallifni qidiring …</string>
    <string name="audio_kitob">Audio Kitob</string>
    <string name="e_kitob">E-Kitob</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="kirish">Kirish</string>
    <string name="ro_yxatdan_o_tish">Ro\'yxatdan o\'tish</string>
    <string name="bosh_sahifa">Bosh Sahifa</string>
    <string name="batafsil">Batafsil</string>
    <string name="tavsifi">Tavsifi</string>
    <string name="sharhlar">Sharhlar</string>
    <string name="iqtiboslar">Iqtiboslar</string>
    <string name="tavsiyalar">Tavsiyalar</string>
    <string name="add_your_comment">O\'z sharhingizni yozing …</string>
    <string name="tilni_qidirish">Tilni qidirish</string>
    <string name="top_toifalar">Top Toifalar</string>
    <string name="yaqinda_izlanganlar">Yaqinda izlanganlar</string>
    <string name="tilni_ozgartir">Tilni ozgartir</string>
    <string name="saqlanganlar">Saqlanganlar</string>
    <string name="qidiruv">Qidiruv</string>
    <string name="asosiy">Asosiy</string>
    <string name="maqolalar">Maqolalar</string>
    <string name="ijtimoiy_tarmoq">Ijtimoiy tarmoq</string>
    <string name="telegram_kanalimiz">Telegram Kanalimiz</string>
    <string name="instagram_do_konimiz">Instagram do\'konimiz</string>
    <string name="ulashish">Ulashish</string>
    <string name="bizga_baho_bering">Bizga baho bering</string>
    <string name="akkount">Akkount</string>
    <string name="hisobdan_chiqish">Hisobdan chiqish</string>
    <string name="parolni_takrorlang">Parolni takrorlang</string>
    <string name="parolni_kiriting">Parolni kiriting</string>
    <string name="parol">Parol</string>
    <string name="email">Email</string>
    <string name="ism">Ism</string>
    <string name="familiya">Familiya</string>
    <string name="hisobingizga_kiring">Hisobingizga kiring</string>
    <string name="parolingizni_unutdingmiz">Parolingizni unutdingmiz?</string>
    <string name="meni_eslab_qol">Meni eslab qol</string>
    <string name="hisobingiz_yo_qmi">Hisobingiz yo\'qmi ?</string>
</resources>