<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/asosiy">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/main"
                android:icon="@drawable/outline_menu_book_24"
                android:title="@string/bosh_sahifa" />
            <item
                android:id="@+id/search"
                android:icon="@drawable/outline_search_24"
                android:title="@string/qidiruv" />
            <item
                android:id="@+id/articles"
                android:icon="@drawable/article_icon"
                android:title="@string/maqolalar" />
            <item
                android:id="@+id/saved"
                android:icon="@drawable/baseline_bookmark_border_24"
                android:title="@string/saqlanganlar" />
            <item
                android:id="@+id/lang"
                android:icon="@drawable/baseline_language_24"
                android:title="@string/tilni_ozgartir" />
            </group>
        </menu>
    </item>

    <item android:title="@string/ijtimoiy_tarmoq">
        <menu>
            <item
                android:id="@+id/telegram"
                android:icon="@drawable/telegram_icon"
                android:title="@string/telegram_kanalimiz" />
            <item
                android:id="@+id/instagram"
                android:icon="@drawable/instagram"
                android:title="@string/instagram_do_konimiz" />
        </menu>
    </item>
    <item android:title="@string/ulashish">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/share_icon"
                android:title="@string/ulashish" />
            <item
                android:id="@+id/rate"
                android:icon="@drawable/star_icon"
                android:title="@string/bizga_baho_bering" />
        </menu>
    </item>
    <item android:title="@string/akkount">
        <menu>
            <item
                android:id="@+id/account"
                android:icon="@drawable/log_out_icon"
                android:title="@string/hisobdan_chiqish" />
        </menu>
    </item>
</menu>